# pet-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  package-lock.json  package.json  vite.config.js
docs/: architecture-evaluation.md
docs/superpowers/specs/: 2026-06-12-slint-migration-design.md
src/: audio.rs  db.rs  hit_test.rs  index.html  main.js  main.rs  popup.html  popup.js  state_machine.rs  styles.css  tts.rs
src-tauri/: Cargo.toml  pet_data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  db.rs  hit_test.rs  lib.rs  main.rs  tts.rs
ui/: pet.slint
