[package]
name = "pet-desktop"
version = "0.2.0"
edition = "2021"
description = "桌面小宠物 - 跨平台陪伴式桌面助手"

[[bin]]
name = "pet-desktop"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.8"
png = "0.17"

[dependencies]
slint = { version = "1.8", features = ["raw-window-handle-06"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tts = "0.25"
rodio = "0.20"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
